--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,3 +50,33 @@ img {
 .ui.secondary.pointing.menu a.item:hover {
 	color: #0094C6; 
 }
+
+.ui.menu.secondary.pointing .active.item {
+	border-color: #f5f5f5; 
+}
+
+.ui.secondary.pointing.menu .active.item:hover {
+	color: #0094C6; 
+}
+
+.ui.secondary.pointing.menu a.item:hover {
+	color: #0094C6; 
+}
+
+@media all and (min-width: 700px) {
+	.ui.menu.secondary.pointing {
+		justify-content: flex-start;
+	}
+}
+
+/* HEADER */
+
+header {
+	background: #005E7C;
+  color: #f5f5f5;
+  display: flex;
+  padding: 10px;
+	align-items: center;
+	justify-content: space-around;
+	box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.75);
+}
