--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,7 @@ img {
 @media all and (min-width: 700px) {
 	.ui.menu.secondary.pointing {
 		justify-content: flex-start;
+		padding-left: 8%;
 	}
 }
 
@@ -86,6 +87,40 @@ header {
 		justify-content: space-between;
 		padding-left: 10%;
 		padding-right: 10%;
+	}
+}
+
+/* SOCIAL MEDIA */
+
+.socialMedia {
+	background: #005E7C;
+	display: flex;
+  justify-content: space-around;
+  font-size: 12px;
+  padding: 3%;
+}
+
+.socialItem {
+  display: flex;
+  align-items: center;
+}
+
+.socialLink {
+	display: none;
+}
+
+i.circular.icon {
+	background-color: #003546;
+	color: #f5f5f5;
+}
+
+@media all and (min-width: 700px) {
+	.socialItem {
+		flex-direction: column;
+		color: #f5f5f5; 
+	}
+	.socialLink {
+		display: initial;
 	}
 }
 
