--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,4 +124,47 @@ i.circular.icon {
 	}
 }
 
+/* FOOTER */f5f5; 
+	}
+	.socialLink {
+		display: initial;
+	}
+}
+
 /* FOOTER */
+
+footer {
+  background: #003546;
+	color: #f5f5f5;
+	padding: 5%;
+	text-align: center;
+	font-size: 75%;
+}
+
+footer p {
+	margin-bottom: 0;
+}
+
+footer span {
+	display: none;
+}
+
+@media all and (min-width: 700px) {
+	footer {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-content: center;
+		font-size: 10px;
+		padding: 1.5% 3%;
+	}
+	.address {
+		display: inline-block;
+	}
+	footer p {
+		display: inline-block;
+	}
+	footer span {
+		display: initial;
+	}
+}
