--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,18 @@ img {
 	max-height: 100px;
 }
 
+i.circular.icon {
+	color: #f5f5f5;
+}
+.dark {
+	background-color: #003546;
+}
+.light {
+	background-color: #0094C6;
+}
+
+
+
 /* CONTAINER */
 .container {
 	width: 100vw;
@@ -109,22 +121,10 @@ header {
 	display: none;
 }
 
-i.circular.icon {
-	background-color: #003546;
-	color: #f5f5f5;
-}
-
 @media all and (min-width: 700px) {
 	.socialItem {
 		flex-direction: column;
 		color: #f5f5f5; 
-	}
-	.socialLink {
-		display: initial;
-	}
-}
-
-/* FOOTER */f5f5; 
 	}
 	.socialLink {
 		display: initial;
