--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,12 +16,6 @@ h4, h3 {
 	color: #005E7C;
 }
 
-img {
-	max-width: 100px;
-	border-radius: 50%;
-	max-height: 100px;
-}
-
 i.circular.icon {
 	color: #f5f5f5;
 }
@@ -32,9 +26,8 @@ i.circular.icon {
 	background-color: #0094C6;
 }
 
-
-
 /* CONTAINER */
+
 .container {
 	width: 100vw;
 	overflow: hidden;
@@ -50,6 +43,7 @@ i.circular.icon {
 }
 
 /* MENU */
+
 .ui.menu.secondary.pointing {
 	background-color: #003546;
 	margin: 0;
@@ -92,6 +86,12 @@ header {
 	align-items: center;
 	justify-content: space-around;
 	box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.75);
+}
+
+header img {
+	max-width: 100px;
+	border-radius: 50%;
+	max-height: 100px;
 }
 
 @media all and (min-width: 700px) {
