--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,6 +102,49 @@ header img {
 	}
 }
 
+/* MAIN */
+
+.main, #intro, .mainInfo {
+	margin-top: 10px;
+	overflow: hidden;
+}
+
+@media all and (min-width: 700px) {
+	.main {
+		display: flex;
+	}
+}
+
+/* MAIN ASIDE */
+
+.main aside {
+	padding-bottom: 50px;
+	box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.75);
+}
+
+.additionalInfo, .mainInfo {
+	padding: 5% 10%;
+}
+
+.bg-grey {
+	background: #EEEFEF;
+}
+
+.hrContact p {
+	border-bottom: 1px solid #51626D;
+	padding-bottom: 20px;
+}
+
+@media all and (min-width: 700px) {
+	.additionalInfo {
+		padding: 5% 2%;
+		min-width: 30%;
+	}
+	.mainInfo {
+		padding: 5%;
+	}
+}
+
 /* SOCIAL MEDIA */
 
 .socialMedia {
