--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,17 +112,27 @@ header img {
 	}
 }
 
-/* MAIN */
-
-.main, #intro, .mainInfo {
-	margin-top: 10px;
+/* INTRO */
+#intro {
+	background: #51626D;
+	color: #f5f5f5;
+	margin-top: 6px;
+	padding: 7%;
 	overflow: hidden;
+	box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.75);
 }
 
 @media all and (min-width: 700px) {
-	.main {
-		display: flex;
+	#intro {
+		padding: 4%;
 	}
+	}
+
+/* MAIN */
+
+.main, .mainInfo {
+	margin-top: 10px;
+	overflow: hidden;
 }
 
 /* MAIN ASIDE */
