--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -137,6 +137,10 @@ header img {
 
 /* MAIN ASIDE */
 
+aside h4, aside p {
+	text-align: center;
+}
+
 .main aside {
 	padding-bottom: 50px;
 	box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.75);
@@ -158,6 +162,9 @@ header img {
 @media all and (min-width: 700px) {
 	.main {
 		display: flex;
+	}
+	aside h4, aside p {
+		text-align: left;
 	}
 	.additionalInfo {
 		padding: 5% 2%;
