--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,9 +13,8 @@ body {
 }
 
 ul {
-	margin-bottom: 0px;
+	margin: 0px;
 	padding: 0;
-	padding-top: 5%;
 }
 
 li {
@@ -132,7 +131,7 @@ header img {
 
 /* MAIN */
 
-.main, .mainInfo {
+.main {
 	margin-top: 10px;
 	overflow: hidden;
 }
@@ -148,8 +147,11 @@ aside h4, aside p {
 	box-shadow: 0px 5px 5px 3px rgba(0, 0, 0, 0.75);
 }
 
-.additionalInfo, .mainInfo {
+.additionalInfo {
 	padding: 5% 10%;
+}
+.mainInfo {
+	padding: 10% 10%;
 }
 
 .bg-grey {
@@ -167,7 +169,7 @@ aside h4, aside p {
 }
 
 #personalTbl tr {
-	border-bottom: 1px solid rgb(153, 165, 173); 
+	border-bottom: 1px solid #99a5ad; 
 }
 
 #personalTbl td {
@@ -239,6 +241,60 @@ aside h4, aside p {
 	}
 	.mainInfo {
 		padding: 5%;
+	}
+}
+
+/* MAININFO SECTION */
+#resumeArea {
+	background: #DEE9EF;
+}
+
+.workItem, .eduItem {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	display: flex;
+	flex-direction: column;
+	border-left: 1px solid #003546;
+	padding: 0 10%;
+	margin-left: 5%;
+	position: relative;
+}
+
+.work, .education {
+	padding-top: 10px;
+}
+
+.workItem span, .eduItem span {
+	font-weight: bold;
+}
+
+.workItem p, .eduItem p {
+	padding: 2% 0 5% 0;
+	border-bottom: 1px #99a5ad solid;
+}
+
+.workItem::before, .eduItem::before {
+  position: absolute;
+  top: -1%;
+  left: -1.5%;
+  width: 2.5%;
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 2.5%;
+  display: block;
+  content: "";
+  background-color: #003546;
+  border-radius: 50%;
+	box-shadow: 0 0 20px 12px #005E7C, 0 0 0 12px #003546; 
+}
+
+@media all and (min-width: 700px) {
+	.workItem, .eduItem {
+		flex-flow: row wrap;
+		justify-content: space-between;
+	}
+	.workright{
+		flex-basis: 25%;
 	}
 }
 
