--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -288,44 +288,52 @@ aside h4, aside p {
 	box-shadow: 0 0 20px 12px #005E7C, 0 0 0 12px #003546; 
 }
 
+.skills {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
 .skillset {
-	height: 120px;
-	width: 120px;
+	height: 84px;
+	width: 84px;
 	position: relative;
-	margin: 10px;
+	margin: 5px;
 }
 
 .skillProgress {
-	height: 120px;
-	width: 120px;
-	/* clip: rect(0, 120px, 120px, 0px); */
+	height: 84px;
+	width: 10px;
 	position: absolute;
 	top: 0;
 	left: 0;
 }
 
 .halfCircle {
-	height: 120px;
-	width: 120px;
+	height: 84px;
+	width: 84px;
 	border: 10px solid #003546;
 	border-radius: 50%;
-	clip: rect(0, 60px, 120px, 0);
+	clip: rect(0, 42px, 84px, 0);
 	top: 0;
 	left: 0;
 	position: absolute;
 }
 
 .label {
+	font-size: 16px;
+	line-height: 10px;
 	border-radius: 50%;
 	display: block;
+	top: 30px;
+	left: 6px;
 	position: absolute;
 	text-align: center;
 	background: none;
 }
 
 .shadow {
-	height: 120px;
-	width: 120px;
+	height: 84px;
+	width: 84px;
 	border: 10px solid #99a5ad;
 	border-radius: 50%;
 }
@@ -355,6 +363,9 @@ transform: rotate(-152deg);
 	}
 	.workright{
 		flex-basis: 25%;
+	}
+	.skills {
+		flex-wrap: nowrap;
 	}
 }
 
